# plutarch-template

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  plutarch-template.cabal
app/: Main.hs
src/: AlwaysSucceeds.hs  Basics.hs  DAOValidator.hs  EmurgoMinting.hs  EmurgoMintingPlutus.hs  HandsOn.hs  ParamApp.hs  SmallValidator.hs  SmartHandles.hs  Utils.hs
